[tool.poetry]
name = "storm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dspy-ai = "2.4.9"
wikipedia = "1.4.0"
sentence-transformers = "^3.0.1"
toml = "^0.10.2"
langchain-text-splitters = "^0.2.2"
trafilatura = "^1.12.0"
langchain-huggingface = "^0.0.3"
qdrant-client = "^1.10.1"
langchain-qdrant = "^0.1.3"
numpy = "1.26.4"
temporalio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
